--- a/rws_javaClassicDemo/src/main/webapp/hello.xhtml
+++ b/rws_javaClassicDemo/src/main/webapp/hello.xhtml
@@ -6,7 +6,7 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>JSF 2.0 Hello World</title>
+	<title>JSF 2.1 Hello Rijkswaterstaat</title>
 </h:head>
 <h:body>
 	<h3>JSF 2.1 Hello Rijkswaterstaat Example - hello.xhtml</h3>
