--- a/rws_javaClassicDemo/src/main/webapp/hello.xhtml
+++ b/rws_javaClassicDemo/src/main/webapp/hello.xhtml
@@ -6,10 +6,10 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>JSF 2.1 Hello Rijkswaterstaat</title>
+	<title>JSF 2.2 Hello Rijkswaterstaat</title>
 </h:head>
 <h:body>
-	<h3>JSF 2.1 Hello Rijkswaterstaat Voorbeeld - hello.xhtml</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld ....</h3>
 	<h:form>
 		<h:inputText value="#{helloBean.name}"></h:inputText>
 		<h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
