--- a/rws_javaClassicDemo/src/main/webapp/hello.xhtml
+++ b/rws_javaClassicDemo/src/main/webapp/hello.xhtml
@@ -9,11 +9,11 @@
 	<title>JSF 2.2 Hello Rijkswaterstaat</title>
 </h:head>
 <h:body>
-	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld I....</h3>
 	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld II ....</h3>
 	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld III ....</h3>
-	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld III ....</h3>
-	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld III ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld IV ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld V ....</h3>
 	<h:form>
 		<h:inputText value="#{helloBean.name}"></h:inputText>
 		<h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
