--- a/rws_javaClassicDemo/src/main/webapp/hello.xhtml
+++ b/rws_javaClassicDemo/src/main/webapp/hello.xhtml
@@ -14,6 +14,9 @@
 	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld III ....</h3>
 	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld IV ....</h3>
 	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld V ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld VI ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld VII ....</h3>
+	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld VIII ....</h3>
 	<h:form>
 		<h:inputText value="#{helloBean.name}"></h:inputText>
 		<h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
