--- a/rws_javaClassicDemo/src/main/webapp/hello.xhtml
+++ b/rws_javaClassicDemo/src/main/webapp/hello.xhtml
@@ -6,10 +6,11 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>JSF 2.2 Hello Rijkswaterstaat</title>
+	<title>Test Sample</title>
 </h:head>
 <h:body>
-	<h3>JSF 2.2 Hello Rijkswaterstaat Voorbeeld I....</h3>
+    <h3>you are now on docker machine: <h:outputText value="#{helloBean.hostName}" /></h3>
+    <h3>you are now on: <h:outputText value="#{helloBean.asName}" /></h3>
 	<h:form>
 		<h:inputText value="#{helloBean.name}"></h:inputText>
 		<h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
